--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - orthanc_db:/var/lib/orthanc/db/
 
   ohif_viewer:
-    image: anilyerramsu/ohif-viewer-image
+    image: ohif-viewer-image
     ports:
       - 3000:80
     environment: 
